fixed page overflow

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -8,10 +8,7 @@
   &__body {
     margin: 0;
     min-width: 320px;
-
-    @include onDesktop {
-      overflow-x: hidden;
-    }
+    overflow-x: hidden;
   }
 
   &__menu {
